# ai-cli-template

./: .env.example  .gitignore  AGENT.md  README.md  config.yaml  mirascope_cli.py  pyproject.toml  requirements.txt
.claude/skills/playwright-cli/: SKILL.md
.claude/skills/skill-doc/: SKILL.md
.claude/skills/tool-dev/: SKILL.md
.tmp/: test_no_drawing.ps1  test_virtual_screen.ps1  virt_out.txt
docs/: voice_input.md  voice_output.md
prompts/: AGENT.md  PERSONA.md  cli.md  plan.md  system.md
src/: multiline_input.py
src/base_cli/: __init__.py
src/base_cli/tools/: __init__.py  _validators.py  compact_state.py  execute_bash.py  file_create.py  file_edit.py  file_read.py  git_add_commit_push.py  git_history.py  git_revert_to_commit.py  restart_cli.py
src/tools/: compact_state.py  execute_bash.py  file_create.py  file_edit.py  file_read.py  plan.py  screenshot.py  skill_list.py  speak.py
src/utils/: __init__.py  load_model.py  load_prompts.py
src/utils/skills/: manager.py
src/voice/: __init__.py  audio_io.py  tts.py
