[build-system]
requires = ["hatchling"]
build-backend = "hatchling.backends"

[project]
name = "base-cli"
version = "0.1.0"
description = "A CLI agent template built with Mirascope"
requires-python = ">=3.12"
dependencies = [
    "mirascope",
    "pyyaml",
    "click",
    "python-dotenv",
]

[project.scripts]
cli-agent = "base_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/base_cli"]
